--- a/statistics.html
+++ b/statistics.html
@@ -1,52 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+    <style>
+        .title {
+            font-size: 20px;
+            font-weight: bold;
+            margin: 20px 15px 10px 15px;
+        }
+
+        .content {
+            font-size: 17px;
+            margin: 0px 15px 10px 15px;
+        }
+
+        span {
+            color: #F5A623;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
-    <script type="text/javascript">
-        var ctx = document.getElementById("myChart").getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-                datasets: [{
-                    label: '# of Votes',
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255,99,132,1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero:true
-                        }
-                    }]
-                }
-            }
-        });
-        </script>
+    <p class="title">今日</p>
+    <p class="content drink">喝水 <span id="drink-times">{0}</span> 次，合计 <span id="drink-ml">{1}</span> ml，好于 <span id="drink-per">{2}</span> 的记录。</p>
+    <p class="content stand">站立 <span id="stand-times">{3}</span> 次，低于 <span id="stand-per">{4}</span> 的记录。</p>
 </body>
 </html>
